src/test/deca/context/invalid/created/acces_field/field_protected_super.deca
// Description :
//    acces à un field protegé, le meme field public existe dans une super class
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 18 :(3.65) L’attribut est protégé

class A{
 int x;
}

class B extends A{
protected int x;
}

{
B a = new B();
int b = a.x;
}